@@ -53,14 +53,12 @@
   </scm>
 
   <properties>
-    <nexus.version>2.5.0-01</nexus.version>
-    <!--<sisu-inject.version>2.3.2</sisu-inject.version>-->
-    <!--<slf4j.version>1.7.2</slf4j.version>-->
+    <nexus.version>2.6.0-SNAPSHOT</nexus.version>
     <maven.version>3.0.4</maven.version>
 
     <!-- Nexus integration-tests configuration -->
-    <it.nexus.bundle.groupId>com.sonatype.nexus</it.nexus.bundle.groupId>
-    <it.nexus.bundle.artifactId>nexus-professional-bundle-template</it.nexus.bundle.artifactId>
+    <it.nexus.bundle.groupId>com.sonatype.nexus.assemblies</it.nexus.bundle.groupId>
+    <it.nexus.bundle.artifactId>nexuspro-bundle-template</it.nexus.bundle.artifactId>
     <it.nexus.bundle.version>${nexus.version}</it.nexus.bundle.version>
 
     <!-- See 'idea' profile. -->
@@ -72,35 +70,16 @@
 
   <dependencyManagement>
     <dependencies>
-      <!--<dependency>-->
-        <!--<groupId>javax.inject</groupId>-->
-        <!--<artifactId>javax.inject</artifactId>-->
-        <!--<version>1</version>-->
-      <!--</dependency>-->
-
       <dependency>
         <groupId>org.sonatype.sisu</groupId>
         <artifactId>sisu-inject-bean</artifactId>
         <version>2.3.2</version>
       </dependency>
 
-      <!--<dependency>-->
-        <!--<groupId>org.sonatype.sisu</groupId>-->
-        <!--<artifactId>sisu-inject-plexus</artifactId>-->
-        <!--<version>${sisu-inject.version}</version>-->
-      <!--</dependency>-->
-
-      <!--<dependency>-->
-        <!--<groupId>org.sonatype.sisu</groupId>-->
-        <!--<artifactId>sisu-guice</artifactId>-->
-        <!--<classifier>no_aop</classifier>-->
-        <!--<version>3.1.2</version>-->
-      <!--</dependency>-->
-
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>13.0.1</version>
+        <version>14.0.1</version>
       </dependency>
 
       <dependency>
@@ -108,12 +87,6 @@
         <artifactId>plexus-component-annotations</artifactId>
         <version>1.5.5</version>
       </dependency>
-
-      <!--<dependency>-->
-        <!--<groupId>org.codehaus.plexus</groupId>-->
-        <!--<artifactId>plexus-classworlds</artifactId>-->
-        <!--<version>2.4</version>-->
-      <!--</dependency>-->
 
       <dependency>
         <groupId>org.codehaus.plexus</groupId>
@@ -125,6 +98,12 @@
         <groupId>org.sonatype.plexus</groupId>
         <artifactId>plexus-sec-dispatcher</artifactId>
         <version>1.4</version>
+        <exclusions>
+         <exclusion>
+           <groupId>org.codehaus.plexus</groupId>
+           <artifactId>plexus-utils</artifactId>
+         </exclusion>
+        </exclusions>
       </dependency>
 
       <dependency>
@@ -137,18 +116,6 @@
         <groupId>org.sonatype.plexus</groupId>
         <artifactId>plexus-cipher</artifactId>
         <version>1.7</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpclient</artifactId>
-        <version>4.2.2</version>
-        <exclusions>
-          <exclusion>
-            <artifactId>commons-logging</artifactId>
-            <groupId>commons-logging</groupId>
-          </exclusion>
-        </exclusions>
       </dependency>
 
       <dependency>
@@ -167,56 +134,24 @@
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-core</artifactId>
         <version>${maven.version}</version>
-        <!--<exclusions>-->
-          <!--<exclusion>-->
-            <!--<groupId>org.apache.maven.wagon</groupId>-->
-            <!--<artifactId>wagon-http</artifactId>-->
-          <!--</exclusion>-->
-          <!--<exclusion>-->
-            <!--<groupId>org.apache.maven.wagon</groupId>-->
-            <!--<artifactId>wagon-http-lightweight</artifactId>-->
-          <!--</exclusion>-->
-          <!--<exclusion>-->
-            <!--<groupId>org.apache.maven.wagon</groupId>-->
-            <!--<artifactId>wagon-webdav-jackrabbit</artifactId>-->
-          <!--</exclusion>-->
-          <!--<exclusion>-->
-            <!--<groupId>org.codehaus.plexus</groupId>-->
-            <!--<artifactId>plexus-container-default</artifactId>-->
-          <!--</exclusion>-->
-          <!--<exclusion>-->
-            <!--<groupId>org.slf4j</groupId>-->
-            <!--<artifactId>slf4j-jdk14</artifactId>-->
-          <!--</exclusion>-->
-        <!--</exclusions>-->
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.maven</groupId>
+        <artifactId>maven-model</artifactId>
+        <version>${maven.version}</version>
       </dependency>
 
       <dependency>
         <groupId>org.apache.maven</groupId>
         <artifactId>maven-compat</artifactId>
         <version>${maven.version}</version>
-        <!--<exclusions>-->
-          <!--<exclusion>-->
-            <!--<groupId>org.codehaus.plexus</groupId>-->
-            <!--<artifactId>plexus-container-default</artifactId>-->
-          <!--</exclusion>-->
-        <!--</exclusions>-->
       </dependency>
 
       <dependency>
         <groupId>org.apache.maven.shared</groupId>
         <artifactId>maven-verifier</artifactId>
         <version>1.3</version>
-        <!--<exclusions>-->
-          <!--<exclusion>-->
-            <!--<groupId>junit</groupId>-->
-            <!--<artifactId>junit-dep</artifactId>-->
-          <!--</exclusion>-->
-          <!--<exclusion>-->
-            <!--<artifactId>junit</artifactId>-->
-            <!--<groupId>junit</groupId>-->
-          <!--</exclusion>-->
-        <!--</exclusions>-->
       </dependency>
 
       <dependency>
@@ -228,19 +163,19 @@
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.7.2</version>
+        <version>1.7.5</version>
       </dependency>
 
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-simple</artifactId>
-        <version>1.7.2</version>
+        <version>1.7.5</version>
       </dependency>
 
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>jcl-over-slf4j</artifactId>
-        <version>1.7.2</version>
+        <version>1.7.5</version>
       </dependency>
 
       <dependency>
@@ -273,14 +208,14 @@
       </dependency>
 
       <dependency>
-        <groupId>org.sonatype.nexus.client</groupId>
+        <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-client-core</artifactId>
         <version>${nexus.version}</version>
         <exclusions>
-          <exclusion>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils-core</artifactId>
-          </exclusion>
+         <exclusion>
+           <groupId>org.codehaus.plexus</groupId>
+           <artifactId>plexus-utils</artifactId>
+         </exclusion>
         </exclusions>
       </dependency>
 
@@ -292,33 +227,15 @@
         <version>${it.nexus.bundle.version}</version>
       </dependency>
 
-      <dependency>
-        <groupId>org.sonatype.nexus.indexer-lucene</groupId>
-        <artifactId>nexus-indexer-lucene-client</artifactId>
-        <version>${nexus.version}</version>
-      </dependency>
-
-      <dependency>
+       <dependency>
         <groupId>org.sonatype.sisu.litmus</groupId>
         <artifactId>litmus-testsupport</artifactId>
-        <version>1.5.1</version>
+        <version>1.6</version>
       </dependency>
 
       <dependency>
-        <groupId>org.sonatype.plexus</groupId>
-        <artifactId>plexus-jetty-testsuite</artifactId>
-        <version>2.1</version>
-      </dependency>
-
-      <dependency>
-        <groupId>com.sonatype.nexus.pluginkit</groupId>
-        <artifactId>nexus-testsuite-support</artifactId>
-        <version>1.3.2</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.sonatype.nexus</groupId>
-        <artifactId>nexus-testsuite-support</artifactId>
+        <groupId>com.sonatype.nexus</groupId>
+        <artifactId>nexuspro-testsuite-support</artifactId>
         <version>${nexus.version}</version>
       </dependency>
 
@@ -333,39 +250,6 @@
   <build>
     <pluginManagement>
       <plugins>
-        <!--<plugin>-->
-          <!--<groupId>org.apache.maven.plugins</groupId>-->
-          <!--<artifactId>maven-surefire-plugin</artifactId>-->
-          <!--<configuration>-->
-            <!--<argLine>-XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError</argLine>-->
-            <!--<workingDirectory>${project.build.directory}</workingDirectory>-->
-            <!--<systemPropertyVariables>-->
-              <!--<h2.check>false</h2.check>-->
-              <!--&lt;!&ndash; workaround for H2 deadlock &ndash;&gt;-->
-            <!--</systemPropertyVariables>-->
-            <!--<excludes>-->
-              <!--<exclude>**/Abstract*.java</exclude>-->
-              <!--<exclude>**/Test*.java</exclude>-->
-            <!--</excludes>-->
-            <!--<includes>-->
-              <!--<include>**/*Test.java</include>-->
-            <!--</includes>-->
-          <!--</configuration>-->
-        <!--</plugin>-->
-
-        <!--<plugin>-->
-          <!--<groupId>org.apache.maven.plugins</groupId>-->
-          <!--<artifactId>maven-failsafe-plugin</artifactId>-->
-          <!--<configuration>-->
-            <!--<argLine>-XX:MaxPermSize=256m -XX:+HeapDumpOnOutOfMemoryError</argLine>-->
-            <!--<workingDirectory>${project.build.directory}</workingDirectory>-->
-            <!--<systemPropertyVariables>-->
-              <!--<h2.check>false</h2.check>-->
-              <!--&lt;!&ndash; workaround for H2 deadlock &ndash;&gt;-->
-            <!--</systemPropertyVariables>-->
-          <!--</configuration>-->
-        <!--</plugin>-->
-
         <plugin>
           <groupId>org.codehaus.plexus</groupId>
           <artifactId>plexus-component-metadata</artifactId>
@@ -415,19 +299,6 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
-    <!--<plugins>-->
-    <!--<plugin>-->
-    <!--<groupId>org.apache.maven.plugins</groupId>-->
-    <!--<artifactId>maven-enforcer-plugin</artifactId>-->
-    <!--<executions>-->
-    <!--<execution>-->
-    <!--<id>enforce-dependencies</id>-->
-    <!--<phase>none</phase>-->
-    <!--</execution>-->
-    <!--</executions>-->
-    <!--</plugin>-->
-    <!--</plugins>-->
   </build>
 
   <reporting>
